--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-"name": "BOT-INDO",
+"name": "KanaoBot-MD",
 "version": "1.1.0",
-"description": "Please Subscribe Me On Youtube Bot Indo",
+"description": "created by hyzer",
 "main": "start.js",
 "type": "commonjs",
 "scripts": {
